add filter and tabs

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,10 +38,14 @@
     "react/button-has-type": "off",
     "react/state-in-constructor": "off",
     "no-plusplus": "off",
+    "no-unused-vars": "warn",
     "no-console": "off",
+    "no-param-reassign": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "no-underscore-dangle": "off",
     "no-return-await": "off",
+    "default-param-last": "off",
+    "import/no-extraneous-dependencies": "off",
     "import/prefer-default-export": "off",
     "arrow-body-style": "off",
     "class-methods-use-this": "off",
